objects/TracHier__Criterion__c.object
<CustomObject>
    <fields>
        <fullName>TracHier__Bridge__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Bridge</label>
        <referenceTo>TracHier__Bridge__c</referenceTo>
        <relationshipLabel>Criteria</relationshipLabel>
        <relationshipName>Criteria</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TracHier__Custom__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TracHier__Field__c</fullName>
        <label>Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TracHier__Operator__c</fullName>
        <label>Operator</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TracHier__Order_Number__c</fullName>
        <label>Order Number</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TracHier__Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Criterion</label>
    <nameField>
        <label>Criterion Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Criteria</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>